lab9/tests/invalid/wrongCategoryId.js
module.exports = {
        "category_id": "20",
        "title": "watches",
        "content": "somecont",
        "price": "100",
        "old_price": "50",
        "status": "0",
        "keywords": "New keywords",
        "description": "New description",
        "hit": "0"
    }
